Localized "No such book" 404 message for /random
However the title and the heading of the 404 page are not localized yet.

--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -5,4 +5,5 @@
 	},
 	"name":"Հայերեն",
 	"suggest-full-text-search": "որոնել '{{{SEARCH_TERMS}}}'..."
+	, "no-such-book": "Գիրքը բացակայում է՝ {{BOOK_NAME}}"
 }
