--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -5,4 +5,5 @@
 	},
 	"name":"English",
 	"suggest-full-text-search": "containing '{{{SEARCH_TERMS}}}'..."
+	, "no-such-book": "No such book: {{BOOK_NAME}}"
 }
