--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -6,4 +6,5 @@
 	"name":"English",
 	"suggest-full-text-search": "containing '{{{SEARCH_TERMS}}}'..."
 	, "no-such-book": "No such book: {{BOOK_NAME}}"
+	, "url-not-found" : "The requested URL \"{{url}}\" was not found on this server."
 }
