--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -6,4 +6,5 @@
 	"name":"Հայերեն",
 	"suggest-full-text-search": "որոնել '{{{SEARCH_TERMS}}}'..."
 	, "no-such-book": "Գիրքը բացակայում է՝ {{BOOK_NAME}}"
+	, "url-not-found" : "Սխալ հասցե՝ {{url}}"
 }
