Internationalized random article failure message

--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -8,4 +8,5 @@
 	, "no-such-book": "No such book: {{BOOK_NAME}}"
 	, "url-not-found" : "The requested URL \"{{url}}\" was not found on this server."
 	, "suggest-search" : "Make a full text search for <a href=\"{{{SEARCH_URL}}}\">{{PATTERN}}</a>"
+	, "random-article-failure" :  "Oops! Failed to pick a random article :("
 }
