--- a/static/i18n/qqq.json
+++ b/static/i18n/qqq.json
@@ -9,4 +9,5 @@
 	, "no-such-book": "Error text when the requested book is not found in the library"
 	, "url-not-found" : "Error text about wrong URL for an HTTP 404 error"
 	, "suggest-search" : "Suggest a search when the URL points to a non existing article"
+	, "random-article-failure" :  "Failure of the random article selection procedure"
 }
