--- a/static/i18n/qqq.json
+++ b/static/i18n/qqq.json
@@ -10,4 +10,5 @@
 	, "url-not-found" : "Error text about wrong URL for an HTTP 404 error"
 	, "suggest-search" : "Suggest a search when the URL points to a non existing article"
 	, "random-article-failure" :  "Failure of the random article selection procedure"
+	, "invalid-raw-data-type" : "Invalid DATATYPE was used with the /raw endpoint (/raw/<book>/DATATYPE/...); allowed values are 'meta' and 'content'"
 }
