--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -7,4 +7,5 @@
 	"suggest-full-text-search": "որոնել '{{{SEARCH_TERMS}}}'..."
 	, "no-such-book": "Գիրքը բացակայում է՝ {{BOOK_NAME}}"
 	, "url-not-found" : "Սխալ հասցե՝ {{url}}"
+	, "404-page-heading" : "Սխալ հասցե"
 }
