--- a/static/i18n/qqq.json
+++ b/static/i18n/qqq.json
@@ -12,4 +12,6 @@
 	, "random-article-failure" :  "Failure of the random article selection procedure"
 	, "invalid-raw-data-type" : "Invalid DATATYPE was used with the /raw endpoint (/raw/<book>/DATATYPE/...); allowed values are 'meta' and 'content'"
 	, "raw-entry-not-found" : "Entry requested via the /raw endpoint was not found"
+	, "404-page-title" : "Title of the 404 error page"
+	, "404-page-heading" : "Heading of the 404 error page"
 }
