Internationalized no-search-result error page
The error page is now generated off the static/templates/error.html
template. The previous template (static/templates/no_search_result.html)
is removed.

--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -13,4 +13,6 @@
 	, "raw-entry-not-found" : "Cannot find {{DATATYPE}} entry {{ENTRY}}"
 	, "404-page-title" : "Content not found"
 	, "404-page-heading" : "Not Found"
+	, "no-search-results-page-title": "Fulltext search unavailable"
+	, "no-search-results": "There is no article with the title <b>\"{{{SEARCH_PATTERN}}}\"</b> and the fulltext search engine is not available for this content."
 }
