--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -9,4 +9,5 @@
 	, "url-not-found" : "Սխալ հասցե՝ {{url}}"
 	, "404-page-title" : "Սխալ հասցե"
 	, "404-page-heading" : "Սխալ հասցե"
+	, "library-button-text": "Գրադարանի էջ"
 }
