--- a/static/i18n/qqq.json
+++ b/static/i18n/qqq.json
@@ -17,4 +17,5 @@
 	, "no-search-results-page-title": "Title of the error page returned for a search on a non-existing book or for an empty pattern"
 	, "no-search-results": "Text of the error page returned for a search on a non-existing book or for an empty pattern"
 	, "library-button-text": "Tooltip of the button leading to the welcome page"
+	, "home-button-text": "Tooltip of the button leading to the main page of a book"
 }
