Internationalized "Go to a randomly selected page"
At this point a potential issue has been revealed. Now we produce
the final HTML via 2-level template expansion

1. Render parameterized messages
2. Render the HTML template

In which templates we should use double mustache "{{}}" (HTML-escaping)
tags and where we may use triple mustache "{{{}}}" (non-escaping) tags?

--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -11,4 +11,5 @@
 	, "404-page-heading" : "Սխալ հասցե"
 	, "library-button-text": "Գրադարանի էջ"
 	, "home-button-text": "Դեպի '{{BOOK_TITLE}}'֊ի գլխավոր էջը"
+	, "random-page-button-text": "Բացել պատահական էջ"
 }
