hy translation of the suggest-search message

--- a/static/i18n/hy.json
+++ b/static/i18n/hy.json
@@ -7,6 +7,7 @@
 	"suggest-full-text-search": "որոնել '{{{SEARCH_TERMS}}}'..."
 	, "no-such-book": "Գիրքը բացակայում է՝ {{BOOK_NAME}}"
 	, "url-not-found" : "Սխալ հասցե՝ {{url}}"
+	, "suggest-search" : "Որոնել <a href=\"{{{SEARCH_URL}}}\">{{PATTERN}}</a>"
 	, "404-page-title" : "Սխալ հասցե"
 	, "404-page-heading" : "Սխալ հասցե"
 	, "library-button-text": "Գրադարանի էջ"
